apps/apuntes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apuntes
spec:
  selector:
    app: apuntes
  ports:
    - port: 80
      targetPort: 80
      name: http
