apps/apuntes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apuntes
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - apuntes.agusbravo.dev
      secretName: apuntes-tls
  rules:
    - host: apuntes.agusbravo.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apuntes
                port:
                  number: 80
